<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Screen"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="36sp"
            android:textColor="@color/mainYellow"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trending_now"
            style="@style/SoopraTitle"
            android:layout_marginStart="20dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trending"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:clipToPadding="false"
            tools:listitem="@layout/movie_list_item"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latest_releases"
            style="@style/SoopraTitle"
            android:layout_marginStart="20dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/latest"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:clipToPadding="false"
            tools:listitem="@layout/movie_list_item"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/film_of_the_day"
            style="@style/SoopraTitle"
            android:layout_marginStart="20dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <com.skydoves.androidveil.VeilLayout
                android:id="@+id/filmOfTheDayVeil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:veilLayout_radius="20dp"
                app:veilLayout_veiled="true"
                app:veilLayout_shimmerEnable="true"
                android:layout_marginTop="10dp">

                <androidx.cardview.widget.CardView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:cardCornerRadius="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    >


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/filmOfTheDayPoster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/fake_poster"
                        android:scaleType="fitXY"/>


                </androidx.cardview.widget.CardView>

            </com.skydoves.androidveil.VeilLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/filmOfTheDayDescription"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_bold"
                android:textSize="17sp"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="@android:color/white"
                android:text=""
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/allMoviesBtn"
            style="@style/SoopraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/all_movies"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>